# cws

./: .clang-format  .gitignore  .gitmodules  Doxyfile  README.md  config.toml  config.yaml  meson.build
include/: client.h  colors.h  hashmap.h  main.h  meson.build  server.h  utils.h
include/client/: client.h
include/config/: config.h
include/core/: epoll.h  epoll_utils.h  server.h  socket.h  socket_utils.h  worker.h
include/http/: handler.h  http.h  mime.h  request.h  response.h  types.h
include/server/: epoll_utils.h  server.h  threadpool.h  worker.h
include/utils/: colors.h  config.h  debug.h  error.h  hash.h  hash_utils.h  hashmap.h  net.h  net_utils.h  utils.h
notes/: advanced-techniques.md  basic-concepts.md  hash-table.md  http-request.md
src/: client.c  hashmap.c  main.c  mainc.c  meson.build  server.c  utils.c
src/client/: client.c  main.c
src/config/: config.c
src/core/: epoll_utils.c  server.c  socket.c  socket_utils.c  worker.c
src/http/: handler.c  http.c  mime.c  request.c  response.c  types.c
src/internal/: common.h
src/server/: epoll_utils.c  server.c  threadpool.c  worker.c
src/utils/: config.c  debug.c  error.c  hash.c  hash_utils.c  hashmap.c  net.c  net_utils.c  socket.c  utils.c
test/: common.c  common.h  hashmap_test.c  meson.build  server.c  test_content_length.c  test_get_index.c  test_get_missing.c  test_post.c  test_traversal.c
www/: index.html  style.css
www/pages/: 404.html  500.html
