server = files('main.c')
server += files(
  'core/epoll_utils.c',
  'core/server.c',
  'core/socket_utils.c',
  'core/worker.c',
)
server += files('config/config.c')
server += files('utils/hash_utils.c', 'utils/net_utils.c')
server += files(
  'http/mime.c',
  'http/request.c',
  'http/response.c',
)
