server = files('main.c')
server += files(
  'core/epoll.c',
  'core/server.c',
  'core/socket.c',
  'core/worker.c',
)
server += files('config/config.c')
server += files(
  'utils/debug.c',
  'utils/error.c',
  'utils/hash.c',
  'utils/net.c',
)
server += files(
  'http/mime.c',
  'http/request.c',
  'http/response.c',
)
